--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,10 @@
  *= require_tree .
  *= require_self
  */
+ 
+ h1 {
+   padding-bottom: 9px;
+   margin: 40px 0 20px;
+   border-bottom: 1px solid #eee;
+   text-align: center;
+ }
